--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade do leleo</title>
 </head>
-<body>
-    
+<body style="background: antiquewhite;">
+    <h1 style="color: brown;font-size: 88px;">Atividade do leleo</h1>
 </body>
 </html>
